# Graphnn-VR

./: .gitignore  README.md  README_CN.md  pyproject.toml
.cursor/rules/: general-rules.mdc
graphnn/: __init__.py
graphnn/engine/: eval.py  infer_sliding_gnn.py  infer_sliding_save.py  model.py
graphnn/server/: gnn_socket.py  ue_socket.py
graphnn/train/: debug.py  gnn_vr.py  gnn_vr_2.py  gru.py  improved_train_gnn_vr.py  lstm.py
graphnn/utils/: metrics.py  smooth.py
graphnn/viz/: plot_arch.py  plot_convergence.py  plot_traj_all.py  plot_traj_preds.py  plot_traj_preds_2.py  plot_traj_real.py
scripts/: export_ts.py
