[tool.poetry]
name = "graphnn"
version = "0.1.0"
packages = [{ include = "graphnn" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
torch = { version = "^2.2", extras = ["cuda"] }   # CPU 用户去掉 extras
torch-geometric = "^2.5"
tqdm = "^4.66"
hydra-core = "^1.3"
matplotlib = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.4"
ruff = "^0.4"
